--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
-  "dependencies": {
-    "node-sass": "^6.0.1",
-    "nodemon": "^2.0.12"
-  },
-  "name": "proyecto",
+  "name": "proyecto-webdev",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass --include-path scss scss/main.scss css/styles.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alanscalia/DolinaWebPage-Scalia.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alanscalia/DolinaWebPage-Scalia/issues"
+  },
+  "homepage": "https://github.com/alanscalia/DolinaWebPage-Scalia#readme",
+  "devDependencies": {
+    "node-sass": "^6.0.1",
+    "nodemon": "^2.0.12"
+  },
+  "dependencies": {},
   "description": ""
 }
